fix: make grid respond to outer spacing var.

--- a/source/sass/object/_grid.scss
+++ b/source/sass/object/_grid.scss
@@ -48,14 +48,14 @@ $o-grid-gutters: (
             .grid + .grid,
             .o-grid + .grid,
             .grid + .o-grid  {
-                margin-top: #{$gutter};
+                margin-top: calc(#{$gutter} * var(--outer-space));
             }
 
             .o-grid.o-grid--form + .o-grid.o-grid--form,
             .grid.grid--form + .grid.grid--form,
             .o-grid.o-grid--form + .grid.grid--form,
             .grid.grid--form + .o-grid.o-grid--form  {
-                margin-top: calc(#{$gutter} * .5);
+                margin-top: calc(#{$gutter} * .5 * var(--outer-space));
             }
         }
     }
@@ -104,19 +104,19 @@ $o-grid-gutters: (
     .grid + .grid,
     .o-grid + .grid,
     .grid + .o-grid  {
-        margin-top: calc(#{var_default.$base} * #{$o-grid-gap} * 0.5);
+        margin-top: calc(#{var_default.$base} * #{$o-grid-gap} * 0.5 * var(--outer-space));
     }
 
     .o-grid.o-grid--form + .o-grid.o-grid--form,
     .grid.grid--form + .grid.grid--form,
     .o-grid.o-grid--form + .grid.grid--form,
     .grid.grid--form + .o-grid.o-grid--form  {
-        margin-top: #{calc(#{var_default.$base} * #{$o-grid-gap} * 0.25)}; 
+        margin-top: calc(#{var_default.$base} * #{$o-grid-gap} * 0.25 * var(--outer-space));
     }
 
     .o-grid,
     .grid {
-        --grid-gap: calc(#{var_default.$base} * #{$o-grid-gap} * 0.5);
+        --grid-gap: calc(#{var_default.$base} * #{$o-grid-gap} * 0.5 * var(--outer-space));
         gap: var(--grid-gap);
 
         &.o-grid--horizontal {
@@ -129,7 +129,7 @@ $o-grid-gutters: (
 
         &.o-grid--form,
         &.o-grid--half-gutter {
-            --grid-gap: #{calc(#{var_default.$base} * #{$o-grid-gap} * 0.25)}; 
+            --grid-gap: calc(#{var_default.$base} * #{$o-grid-gap} * 0.25 * var(--outer-space));
         }
 
         .u-flex--gridgap {
@@ -150,7 +150,7 @@ $o-grid-gutters: (
         @include mq.mq($breakpoint) {
             .o-grid,
             .grid {
-                --grid-gap: #{$gutter};
+                --grid-gap: calc(#{$gutter} * var(--outer-space));
                 gap: var(--grid-gap);
             }
 
@@ -165,7 +165,7 @@ $o-grid-gutters: (
             // Form column margins modifier
             .o-grid.o-grid--form,
             .o-grid.o-grid--half-gutter {
-                --grid-gap: #{calc($gutter / 2)}; 
+                --grid-gap: calc(#{$gutter} / 2 * var(--outer-space));
             }
 
             //Utility 
